# torchoptics

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yaml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  publish.yml
docs/: requirements-docs.txt  requirements.txt
docs/source/: background.rst  conf.py  index.rst
docs/source/_static/: custom-icon.js  hide_links.css  (+1 more)
examples/: 1d_simulations.py  README.rst  beam_modes.py  beam_splitter_interferometer.py  custom_profiles.py  grating_diffraction_orders.py  plot_diffraction_pattern.py  plot_grating.py  plot_polychromatic_4f.py  plot_spatial_coherence.py  polarized_field.py  telescope_system.py  waveplates_and_circular_polarization.py  zernike_aberrations.py
examples/aberrations/: README.rst  chromatic_aberration.py  zernike_aberrations.py
examples/coherence_and_polarization/: README.rst  laser_speckle_patterns.py  polarized_field.py  spatial_coherence.py
examples/optical_phenomena/: README.rst  animate_propagation.py  aperture_limited_psf.py  fresnel_zone_plate.py  gaussian_beam_propagation.py  polychromatic_light_with_grating.py  talbot_effect.py  youngs_double_slit.py
examples/optical_systems/: 4f_system.py  README.rst  lens_focusing.py  mach_zehnder_interferometer.py  phase_only_modulators.py
examples/optimization/: README.rst  training_multi_plane_focusing.py  training_petal_beam.py
examples/quantum/: README.rst  quantum_state_discrimination.py
src/torchoptics/: __init__.py  config.py  fields.py  optics_module.py  planar_grid.py  system.py  types.py  utils.py  visualization.py
tests/: conftest.py  test_elements.py  test_fields.py  test_functional.py  test_optics_module.py  test_profiles.py  test_utils.py
tests/config/: test_config.py
tests/elements/: test_beam_splitter.py  test_cylindrical_lens.py  test_detector.py  test_element.py  test_lens.py  test_modulator.py  test_polarized_modulator.py  test_polarizer.py  test_polarizing_beam_splitter.py  test_waveplate.py
tests/fields/: test_field.py  test_propagation_gradient.py  test_spatial_coherence.py
tests/functional/: test_conv2d.py  test_fft_freq_grad.py  test_linspace_grad.py  test_meshgrid2d.py  test_plane_sample.py
tests/optics_module/: test_optics_module.py
tests/planar_geometry/: test_planar_grid.py
tests/profiles/: test_airy_beam_profile.py  test_bessel_profile.py  test_cylindrical_lens_phase.py  test_gaussian_schell_model.py  test_gratings.py  test_hermite_gaussian_profile.py  test_laguerre_gaussian_profile.py  test_lens_profile.py  test_meshgrid.py  test_shapes.py  test_special_profiles.py  test_wave_profiles.py  test_zernike_profile.py
tests/system/: test_system.py
tests/utils/: test_copy_function.py  test_initialize_shape.py  test_initialize_tensor.py
tests/visualization/: test_visualize_tensor.py
torchoptics/: __init__.py  config.py  fields.py  optics_module.py  planar_geometry.py  planar_grid.py  system.py  type_defs.py  utils.py  visualization.py
torchoptics/elements/: __init__.py  beam_splitters.py  detectors.py  elements.py  identity_element.py  lens.py  modulators.py  polarized_modulators.py  polarizers.py  waveplates.py
torchoptics/functional/: functional.py
torchoptics/profiles/: __init__.py  _profile_meshgrid.py  bessel.py  gratings.py  hermite_gaussian.py  laguerre_gaussian.py  lens.py  lens_phase.py  quadratic_phase.py  shapes.py  spatial_coherence.py  special.py  waves.py  zernike.py
torchoptics/propagation/: __init__.py  angular_spectrum_method.py  direct_integration_method.py  propagator.py
torchoptics/visualization/: __init__.py  visualization.py
(+84 files in other folders)
