[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "torchoptics"
dynamic = ["version"]
authors = [{name = "Matthew Filipovich", email = "matthew.filipovich@physics.ox.ac.uk"}]
description = "Python library for differentiable Fourier optics simulations with PyTorch."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "torch",
  "matplotlib"
]
keywords = [
  "wave optics",
  "PyTorch",
  "machine learning",
  "physics",
  "microscopy",
  "imaging",
  "diffraction",
  "holography",
  "computational optics",
  "Fourier optics",
  "optical neural networks",
  "inverse design",
  "differentiable optics"
]

[project.urls]
Homepage = "https://github.com/MatthewFilipovich/torchoptics"
Documentation = "https://torchoptics.readthedocs.io/"
Tracker = "https://github.com/MatthewFilipovich/torchoptics/issues"
Changelog = "https://github.com/MatthewFilipovich/torchoptics/releases"

[project.optional-dependencies]
dev = [
  "coverage",
  "pre-commit",
  "pyright",
  "pytest",
  "ruff",
  "scipy"
]
docs = [
  "sphinx-autoapi",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-gallery",
  "sphinx-design",
] 

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["B905"]

[tool.coverage.report]
omit = ["tests/*"]
exclude_lines = [
  "if TYPE_CHECKING:"
]

[tool.coverage.run]
omit = ["tests/*"]